#5083 fix for the vertical scrollbar problem, probably also for the horizontal scrollbar problem (albeit it needs testing in Chrome Beta/Canary)
git-svn-id: http://dev.geogebra.org/svn/trunk/geogebra@40084 23ce0884-8a58-47d3-bc5c-ddf1cd5b9f9e

--- a/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
+++ b/web/src/main/resources/org/geogebra/web/resources/css/web-styles.css
@@ -2227,7 +2227,7 @@ body.application[dir=rtl] .gwt-Label.textIconButton {
 }
 
 .InputPanel {
-	overflow: auto;
+	overflow: hidden;
 }
 
 .InputPanel .TextField {
